--- a/customlibrary/src/main/res/values/attrs.xml
+++ b/customlibrary/src/main/res/values/attrs.xml
@@ -14,4 +14,11 @@
             <flag name="fast" value="3000"/>
         </attr>
     </declare-styleable>
+    <declare-styleable name="CustomStatusView">
+        <attr name="progress_color" format="color" />
+        <attr name="progress_width" format="dimension" />
+        <attr name="progress_radius" format="dimension" />
+        <attr name="load_success_color" format="color" />
+        <attr name="load_failure_color" format="color" />
+    </declare-styleable>
 </resources>
