--- a/customlibrary/src/main/res/values/attrs.xml
+++ b/customlibrary/src/main/res/values/attrs.xml
@@ -21,4 +21,9 @@
         <attr name="load_success_color" format="color" />
         <attr name="load_failure_color" format="color" />
     </declare-styleable>
+    <declare-styleable name="FlowLayout">
+        <attr name="text_size" format="dimension"/>
+        <!--<attr name="image_left" format="dimension" />-->
+        <!--<attr name="image_right" format="dimension" />-->
+    </declare-styleable>
 </resources>
